--- a/components/lc/note.html
+++ b/components/lc/note.html
@@ -7,7 +7,7 @@
     <meta name="generator" content="VuePress 1.4.1">
     
     <meta name="description" content="欢迎各位大佬指导">
-    <link rel="preload" href="/assets/css/0.styles.7a985ca1.css" as="style"><link rel="preload" href="/assets/js/app.dc8d0f6d.js" as="script"><link rel="preload" href="/assets/js/2.30a94573.js" as="script"><link rel="preload" href="/assets/js/23.6e6f4413.js" as="script"><link rel="prefetch" href="/assets/js/10.fda63f08.js"><link rel="prefetch" href="/assets/js/11.148ddf47.js"><link rel="prefetch" href="/assets/js/12.c452ab04.js"><link rel="prefetch" href="/assets/js/13.7ac3c769.js"><link rel="prefetch" href="/assets/js/14.ceff4d87.js"><link rel="prefetch" href="/assets/js/15.0cfb94ea.js"><link rel="prefetch" href="/assets/js/16.725208eb.js"><link rel="prefetch" href="/assets/js/17.f7308af1.js"><link rel="prefetch" href="/assets/js/18.2f36a132.js"><link rel="prefetch" href="/assets/js/19.ccbbb6ec.js"><link rel="prefetch" href="/assets/js/20.cf56667f.js"><link rel="prefetch" href="/assets/js/21.94df23d4.js"><link rel="prefetch" href="/assets/js/22.747f21b6.js"><link rel="prefetch" href="/assets/js/24.fa3509bc.js"><link rel="prefetch" href="/assets/js/25.f024011a.js"><link rel="prefetch" href="/assets/js/26.af7b2dd4.js"><link rel="prefetch" href="/assets/js/27.eea4c2c5.js"><link rel="prefetch" href="/assets/js/28.0c650ea1.js"><link rel="prefetch" href="/assets/js/29.6d49f83b.js"><link rel="prefetch" href="/assets/js/3.6fe07c48.js"><link rel="prefetch" href="/assets/js/30.6a3b7cc9.js"><link rel="prefetch" href="/assets/js/31.1b73c6e7.js"><link rel="prefetch" href="/assets/js/32.1bc17bfa.js"><link rel="prefetch" href="/assets/js/33.c9e978f3.js"><link rel="prefetch" href="/assets/js/34.e44cc763.js"><link rel="prefetch" href="/assets/js/35.e9142ea9.js"><link rel="prefetch" href="/assets/js/36.228b614b.js"><link rel="prefetch" href="/assets/js/37.9d37251e.js"><link rel="prefetch" href="/assets/js/38.613b1312.js"><link rel="prefetch" href="/assets/js/39.e7309ad9.js"><link rel="prefetch" href="/assets/js/4.9b25aa1d.js"><link rel="prefetch" href="/assets/js/40.8a81a938.js"><link rel="prefetch" href="/assets/js/41.74ae1846.js"><link rel="prefetch" href="/assets/js/42.833ea9e4.js"><link rel="prefetch" href="/assets/js/5.ae8a4768.js"><link rel="prefetch" href="/assets/js/6.3b2ff676.js"><link rel="prefetch" href="/assets/js/7.b9376b3e.js"><link rel="prefetch" href="/assets/js/8.cd40a18c.js"><link rel="prefetch" href="/assets/js/9.3ddc7341.js">
+    <link rel="preload" href="/assets/css/0.styles.7a985ca1.css" as="style"><link rel="preload" href="/assets/js/app.771d7b2d.js" as="script"><link rel="preload" href="/assets/js/2.30a94573.js" as="script"><link rel="preload" href="/assets/js/23.a61324bf.js" as="script"><link rel="prefetch" href="/assets/js/10.f03ec902.js"><link rel="prefetch" href="/assets/js/11.148ddf47.js"><link rel="prefetch" href="/assets/js/12.d9622920.js"><link rel="prefetch" href="/assets/js/13.3374468e.js"><link rel="prefetch" href="/assets/js/14.8288c4ca.js"><link rel="prefetch" href="/assets/js/15.ac53e809.js"><link rel="prefetch" href="/assets/js/16.725208eb.js"><link rel="prefetch" href="/assets/js/17.0846338d.js"><link rel="prefetch" href="/assets/js/18.e61c870f.js"><link rel="prefetch" href="/assets/js/19.f0b93cf1.js"><link rel="prefetch" href="/assets/js/20.1ba108e0.js"><link rel="prefetch" href="/assets/js/21.3244c5af.js"><link rel="prefetch" href="/assets/js/22.10533d91.js"><link rel="prefetch" href="/assets/js/24.fa3509bc.js"><link rel="prefetch" href="/assets/js/25.bb3bbed6.js"><link rel="prefetch" href="/assets/js/26.eeea8422.js"><link rel="prefetch" href="/assets/js/27.05b26882.js"><link rel="prefetch" href="/assets/js/28.72caa943.js"><link rel="prefetch" href="/assets/js/29.931fc46b.js"><link rel="prefetch" href="/assets/js/3.6fe07c48.js"><link rel="prefetch" href="/assets/js/30.d2f1e828.js"><link rel="prefetch" href="/assets/js/31.9e599fb7.js"><link rel="prefetch" href="/assets/js/32.bfe46ccd.js"><link rel="prefetch" href="/assets/js/33.7fa3bce5.js"><link rel="prefetch" href="/assets/js/34.00167eb7.js"><link rel="prefetch" href="/assets/js/35.fb48db78.js"><link rel="prefetch" href="/assets/js/36.f549d3f1.js"><link rel="prefetch" href="/assets/js/37.493d57fc.js"><link rel="prefetch" href="/assets/js/38.68dea6a5.js"><link rel="prefetch" href="/assets/js/39.e8cd3187.js"><link rel="prefetch" href="/assets/js/4.7a197cdb.js"><link rel="prefetch" href="/assets/js/40.a35f9554.js"><link rel="prefetch" href="/assets/js/41.48ccedc3.js"><link rel="prefetch" href="/assets/js/42.179f952d.js"><link rel="prefetch" href="/assets/js/43.5ea8be27.js"><link rel="prefetch" href="/assets/js/44.23baa205.js"><link rel="prefetch" href="/assets/js/5.ae8a4768.js"><link rel="prefetch" href="/assets/js/6.b4bc485f.js"><link rel="prefetch" href="/assets/js/7.332c1bce.js"><link rel="prefetch" href="/assets/js/8.ab5eb548.js"><link rel="prefetch" href="/assets/js/9.3ddc7341.js">
     <link rel="stylesheet" href="/assets/css/0.styles.7a985ca1.css">
   </head>
   <body>
@@ -22,7 +22,7 @@
 </a></li><li class="dropdown-item"><!----> <a href="/components/button.html" class="nav-link">
   地图组件
 </a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="核心" class="dropdown-title"><span class="title">核心</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/Core/Api/base.html" class="nav-link">
-  重要Api
+  基础
 </a></li><li class="dropdown-item"><!----> <a href="/Core/Achieve/base.html" class="nav-link">
   实现
 </a></li><li class="dropdown-item"><!----> <a href="/v8/base.html" class="nav-link">
@@ -33,7 +33,7 @@
   React概记
 </a></li><li class="dropdown-item"><!----> <a href="/webpack/my_webpack.html" class="nav-link">
   Webpack
-</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="工具生态" class="dropdown-title"><span class="title">工具生态</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/ecology/dev/devloop.html" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="工具生态" class="dropdown-title"><span class="title">工具生态</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/ecology/dev/devtools.html" class="nav-link">
   ping-dev-tool
 </a></li><li class="dropdown-item"><!----> <a href="/ecology/cli/cli.html" class="nav-link">
   ping-cli
@@ -45,13 +45,13 @@
   three.js
 </a></li><li class="dropdown-item"><!----> <a href="/Cansee/D3.html" class="nav-link">
   D3
-</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="杂记" class="dropdown-title"><span class="title">杂记</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/zaji/base.html" class="nav-link">
-  js篇
-</a></li><li class="dropdown-item"><!----> <a href="/zaji/css.html" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="杂记" class="dropdown-title"><span class="title">杂记</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/zaji/css/base.html" class="nav-link">
   css篇
-</a></li><li class="dropdown-item"><!----> <a href="/zaji/gj.html" class="nav-link">
+</a></li><li class="dropdown-item"><!----> <a href="/zaji/js/base.html" class="nav-link">
+  js篇
+</a></li><li class="dropdown-item"><!----> <a href="/zaji/gj/base.html" class="nav-link">
   工具篇
-</a></li></ul></div></div><div class="nav-item"><a href="/xingneng.html" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><a href="/xingneng/base.html" class="nav-link">
   性能优化
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="后端" class="dropdown-title"><span class="title">后端</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/node_note/note.html" class="nav-link">
   node.js
@@ -92,7 +92,7 @@
 </a></li><li class="dropdown-item"><!----> <a href="/components/button.html" class="nav-link">
   地图组件
 </a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="核心" class="dropdown-title"><span class="title">核心</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/Core/Api/base.html" class="nav-link">
-  重要Api
+  基础
 </a></li><li class="dropdown-item"><!----> <a href="/Core/Achieve/base.html" class="nav-link">
   实现
 </a></li><li class="dropdown-item"><!----> <a href="/v8/base.html" class="nav-link">
@@ -103,7 +103,7 @@
   React概记
 </a></li><li class="dropdown-item"><!----> <a href="/webpack/my_webpack.html" class="nav-link">
   Webpack
-</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="工具生态" class="dropdown-title"><span class="title">工具生态</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/ecology/dev/devloop.html" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="工具生态" class="dropdown-title"><span class="title">工具生态</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/ecology/dev/devtools.html" class="nav-link">
   ping-dev-tool
 </a></li><li class="dropdown-item"><!----> <a href="/ecology/cli/cli.html" class="nav-link">
   ping-cli
@@ -115,13 +115,13 @@
   three.js
 </a></li><li class="dropdown-item"><!----> <a href="/Cansee/D3.html" class="nav-link">
   D3
-</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="杂记" class="dropdown-title"><span class="title">杂记</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/zaji/base.html" class="nav-link">
-  js篇
-</a></li><li class="dropdown-item"><!----> <a href="/zaji/css.html" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="杂记" class="dropdown-title"><span class="title">杂记</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/zaji/css/base.html" class="nav-link">
   css篇
-</a></li><li class="dropdown-item"><!----> <a href="/zaji/gj.html" class="nav-link">
+</a></li><li class="dropdown-item"><!----> <a href="/zaji/js/base.html" class="nav-link">
+  js篇
+</a></li><li class="dropdown-item"><!----> <a href="/zaji/gj/base.html" class="nav-link">
   工具篇
-</a></li></ul></div></div><div class="nav-item"><a href="/xingneng.html" class="nav-link">
+</a></li></ul></div></div><div class="nav-item"><a href="/xingneng/base.html" class="nav-link">
   性能优化
 </a></div><div class="nav-item"><div class="dropdown-wrapper"><button type="button" aria-label="后端" class="dropdown-title"><span class="title">后端</span> <span class="arrow right"></span></button> <ul class="nav-dropdown" style="display:none;"><li class="dropdown-item"><!----> <a href="/node_note/note.html" class="nav-link">
   node.js
@@ -152,6 +152,6 @@
 </a></div> <a href="https://github.com/wsmjz" target="_blank" rel="noopener noreferrer" class="repo-link">
     GitHub
     <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></nav>  <ul class="sidebar-links"><li><section class="sidebar-group depth-0"><p class="sidebar-heading open"><span>流程图组件</span> <!----></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/components/lc/note.html" class="active sidebar-link">流程图组件</a><ul class="sidebar-sub-headers"><li class="sidebar-sub-header"><a href="/components/lc/note.html#审批流程" class="sidebar-link">审批流程</a></li><li class="sidebar-sub-header"><a href="/components/lc/note.html#图画流程" class="sidebar-link">图画流程</a></li></ul></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="流程图组件"><a href="#流程图组件" class="header-anchor">#</a> 流程图组件</h1> <h2 id="审批流程"><a href="#审批流程" class="header-anchor">#</a> 审批流程</h2> <p>审批流程示例</p> <h3 id="三级"><a href="#三级" class="header-anchor">#</a> 三级</h3> <p>胜多负少</p> <h2 id="图画流程"><a href="#图画流程" class="header-anchor">#</a> 图画流程</h2> <p>图画流程示例</p></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.dc8d0f6d.js" defer></script><script src="/assets/js/2.30a94573.js" defer></script><script src="/assets/js/23.6e6f4413.js" defer></script>
+    <script src="/assets/js/app.771d7b2d.js" defer></script><script src="/assets/js/2.30a94573.js" defer></script><script src="/assets/js/23.a61324bf.js" defer></script>
   </body>
 </html>
